tests/rosetta/out/Go/active-directory-search-for-a-user.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/active-directory-search-for-a-user.go:61:6: main redeclared in this block
	../../tests/rosetta/out/Go/active-directory-search-for-a-user.go:16:6: other declaration of main
